Rewrite mod for Minecraft 26.2
Ports the mod from 1.21.11/Yarn to real Minecraft 26.2 (unobfuscated
Mojang mappings, no Yarn/Intermediary), rebuilding the GUI on vanilla
widgets since owo-lib has no 26.2 build, and splitting pure logic
(time parsing, penalty multiplier, command templating, chat filtering)
into tested, Minecraft-independent classes.

- Drop owo-lib; GUI rebuilt on vanilla Screen/AbstractWidget with a
  flat minimal render style (no more 3D bevels/drop-shadows)
- Cloth Config screen restructured into flat top-level categories
  with a dedicated per-action editor screen, replacing the old
  3-level-nested subcategory tree and its hand-rolled button entries
- DiscordWebhook rebuilt on java.net.http.HttpClient; dropped the
  hardcoded fallback webhook URL (opt-in only now)
- Fixed known bugs: local-log filename collisions, ChatBacklog
  buffer size coupling two unrelated settings, dead HistoryTracker
  and MAX_CHAT_LENGTH code
- Added JUnit 5 tests for the pure logic classes

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>